[package]
name = "skely"
version = "0.1.1"
authors = ["Lucas Newcomb <pantsbabyy@gmail.com>"]
description = """
A simple command line tool for using and managing skeleton projects
"""
documentation = "https://github.com/pants721/skely"
homepage = "https://github.com/pants721/skely"
repository = "https://github.com/pants721/skely"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
clap = {version = "4.1.8", features = [ "derive" ]}
anyhow = "1.0.69"
colored = "2.0.0"
serde = {version = "1.0.152", features = [ "derive" ]}
toml = "0.7.2"

[[bin]]
name = "sk"
path = "src/main.rs"
