[package]
name = "skely"
version = "2.0.0"
authors = ["Lucas Newcomb <pantsbabyy@gmail.com>"]
description = """
A simple command line tool for using and managing skeleton projects
"""
documentation = "https://github.com/pants721/skely"
homepage = "https://github.com/pants721/skely"
repository = "https://github.com/pants721/skely"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "^0.5.5"
clap = {version = "^4.3.21", features = [ "derive" ]}
anyhow = "^1.0.72"
colored = "^2.0.4"

[[bin]]
name = "sk"
path = "src/main.rs"
